Laguage cookie added

--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 <body>
 
     <div id="theme">
-    <p>Chose app theme:</p>
-    <label for="theme">Light</label>
-    <input type="radio" name="theme" value="light" />
-    <label for="theme">Dark</label>
-    <input type="radio" name="theme" value="dark" /> 
+        <p>Chose app theme:</p>
+        <label for="theme">Light</label>
+        <input type="radio" name="theme" value="light" />
+        <label for="theme">Dark</label>
+        <input type="radio" name="theme" value="dark" /> 
+    </div>
+
+    <div id="language">
+        <p>Chose app theme:</p>
+        <label for="language">RO</label>
+        <input type="radio" name="language" value="ro" />
+        <label for="language">EN</label>
+        <input type="radio" name="language" value="en" /> 
     </div>
 
 
